# revity-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
revity/: manage.py
revity/cards/: admin.py  models.py  serializers.py  urls.py  views.py
revity/cards/migrations/: 0001_initial.py  0002_card_balance_alter_card_card_number_alter_card_user_and_more.py  0003_alter_card_options_alter_card_active_until.py  0004_remove_card_balance.py
revity/goals/: admin.py  models.py  serializers.py  urls.py  views.py
revity/goals/migrations/: 0001_initial.py  0002_goal_user.py
revity/revity/: asgi.py  settings.py  urls.py  wsgi.py
revity/transactions/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
revity/transactions/migrations/: 0001_initial.py  0002_transaction_category_and_more.py  0003_alter_transaction_receiver.py  0004_alter_transaction_transaction_date.py
revity/users/: admin.py  models.py  serializers.py  urls.py
revity/users/migrations/: 0001_initial.py
revity/users/views/: auth.py  users.py
