[tool.poetry]
name = "revity-backend"
version = "0.1.0"
description = ""
authors = ["aquarell <aquarell.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
django-rest-framework = "^0.1.0"
django-types = "^0.20.0"
django-stubs-ext = "^5.1.3"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
